--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="team-item">
               <img src="assets/images/team_01.jpg" alt="">
               <div class="down-content">
-                <h4>Shamsusheen PK</h4>
+                <h4>Shamsudheen PK</h4>
                 <span>Co-Founder</span>
                 <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
               </div>
