--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@ https://templatemo.com/tm-545-finance-business
             <div class="img-fill">
                 <div class="text-content">
                   <h6>we are ready to help you</h6>
-                  <h4>Tax Consulting<br>&amp; Accounting</h4>
-                  <p>We are here to help peoples and Organizations in paying their Taxes. We hold expertise in tax law, tax compliance, and tax planning. ... Hiring us doesn't cost much and can help you pay only the required tax and avoid any tax liabilities at the end of the financial year.</p>
+                  <h4>Tax Consultants<br>&amp; Practical Training Center</h4>
+                  <p>We are here to help peoples and Organizations in paying their Taxes. <br>
+                   <p>We provide Practical Training for Tax and Accounts to Students</p>
                   <a href="contact.html" class="filled-button">contact us</a>
                 </div>
             </div>
@@ -171,8 +172,14 @@ https://templatemo.com/tm-545-finance-business
             <div class="service-item">
               <img src="assets/images/service_02.jpg" alt="">
               <div class="down-content">
-                <h4>Financial Reporting</h4>
-                <p>Financial statements are the ultimate report card of a company’s fiscal performance. They enable owners and managers to pursue their business objectives, whether they are raising capital or restructure. Therefore, every business activity, through the company’s lifecycle, impacts the financial statements and hence needs to be carefully examined and analysed.</p>
+                <h4>Practical Training</h4>
+                <p>Training Provides the following <br>
+                  - MS Office Packages <br>
+                  - Manual Accounting <br>
+                  - Computerized Accounting <br>
+                  - Final Accounts <br>
+                  - GST Return & Filing Courses <br>
+                </p>
               </div>
             </div>
           </div>
